--- a/Resources/views/admin/plan/create.html.twig
+++ b/Resources/views/admin/plan/create.html.twig
@@ -1,5 +1,6 @@
 {% trans_default_domain 'sfs_subscription' %}
 {% extends '@SfsSubscription/admin_layout.html.twig' %}
+{% block title %}{{ 'admin_plans.create.page_title'|trans }}{% endblock %}
 
 {% block content %}
     {{ form_start(form) }}
