--- a/Resources/views/admin/plan/list.html.twig
+++ b/Resources/views/admin/plan/list.html.twig
@@ -1,5 +1,6 @@
 {% trans_default_domain 'sfs_subscription' %}
 {% extends '@SfsSubscription/admin_layout.html.twig' %}
+{% block title %}{{ 'admin_plans.list.page_title'|trans }}{% endblock %}
 
 {% block content %}
 
