--- a/Resources/views/admin_layout.html.twig
+++ b/Resources/views/admin_layout.html.twig
@@ -1,6 +1,1 @@
-{% extends 'base.html.twig' %}
-
-{% block body %}
-    {% block content %}
-    {% endblock content %}
-{% endblock body %}
+{% extends '@SfsAdmin/layout.html.twig' %}
