--- a/Resources/views/admin/plan/list-page.html.twig
+++ b/Resources/views/admin/plan/list-page.html.twig
@@ -1,6 +1,14 @@
+{% trans_default_domain 'sfs_subscription' %}
+
 {% for plan in entities %}
     <tr>
+        <td>{{ plan.platform ? ('platform.values.'~plan.platform)|trans : '' }}</td>
+        <td>{{ plan.platformId }}</td>
         <td>{{ plan.name }}</td>
         <td>{{ plan.product ? plan.product.name : '' }}</td>
+        <td class="text-right">
+            {{ plan.amount|number_format(2) }}
+            <small>{{ plan.currency|upper }} {% if plan.interval %}/{{ ('plan.interval.values.'~plan.interval)|trans }}{% endif %}</small>
+        </td>
     </tr>
 {% endfor %}
