--- a/Resources/views/admin/plan/list.html.twig
+++ b/Resources/views/admin/plan/list.html.twig
@@ -7,9 +7,12 @@
     <table class="table">
         <thead>
         <tr>
+            <th scope="col">{{ 'admin_plans.list.fields.platform.header'|trans }}</th>
+            <th scope="col">{{ 'admin_plans.list.fields.platformId.header'|trans }}</th>
             <th scope="col">{{ 'admin_plans.list.fields.name.header'|trans }}</th>
             <th scope="col">{{ 'admin_plans.list.fields.product.header'|trans }}</th>
-            <th>&nbsp;</th>
+            <th scope="col" class="text-right">{{ 'admin_plans.list.fields.price.header'|trans }}</th>
+{#            <th>&nbsp;</th>#}
         </tr>
         </thead>
 
