--- a/Resources/views/admin/product/list.html.twig
+++ b/Resources/views/admin/product/list.html.twig
@@ -7,8 +7,10 @@
     <table class="table">
         <thead>
         <tr>
+            <th scope="col">{{ 'admin_products.list.fields.platform.header'|trans }}</th>
+            <th scope="col">{{ 'admin_products.list.fields.platformId.header'|trans }}</th>
             <th scope="col">{{ 'admin_products.list.fields.name.header'|trans }}</th>
-            <th>&nbsp;</th>
+{#            <th>&nbsp;</th>#}
         </tr>
         </thead>
 
