Set a list of admin layout template

--- a/Resources/views/admin_layout.html.twig
+++ b/Resources/views/admin_layout.html.twig
@@ -1,1 +1,1 @@
-{% extends '@SfsAdmin/layout.html.twig' %}
+{% extends ['@SfsAdmin/layout.html.twig', 'admin/layout.html.twig', 'base.html.twig'] %}
