--- a/Resources/views/admin/subscription/list.html.twig
+++ b/Resources/views/admin/subscription/list.html.twig
@@ -12,7 +12,7 @@
     <table class="table">
         <thead>
         <tr>
-            <th scope="col">{{ 'admin_subscriptions.list.fields.client.header'|trans }}</th>
+            <th scope="col">{{ 'admin_subscriptions.list.fields.customer.header'|trans }}</th>
             <th scope="col">{{ 'admin_subscriptions.list.fields.plan.header'|trans }}</th>
             <th scope="col">{{ 'admin_subscriptions.list.fields.status.header'|trans }}</th>
             <th scope="col">{{ 'admin_subscriptions.list.fields.startDate.header'|trans }}</th>
