--- a/Resources/views/admin/subscription/list-page.html.twig
+++ b/Resources/views/admin/subscription/list-page.html.twig
@@ -2,7 +2,7 @@
 
 {% for subscription in entities %}
     <tr>
-        <td>{{ subscription.client.name }}</td>
+        <td>{{ subscription.customer.name }}</td>
         <td>{{ subscription.plan.name|default('') }}</td>
         <td>{{ subscription.statusString }}</td>
         <td>{{ subscription.startDate ? subscription.startDate|date('d-m-Y') : '' }}</td>
