styles to admin

--- a/Resources/views/admin/subscription/list-page.html.twig
+++ b/Resources/views/admin/subscription/list-page.html.twig
@@ -9,7 +9,7 @@
         <td>{{ subscription.endDate ? subscription.endDate|date('d-m-Y') : '' }}</td>
 
         {% if read_route %}
-            <td><a href="{{ url(read_route, {'entity':subscription}) }}">details</a></td>
+            <td><a href="{{ url(read_route, {'entity':subscription}) }}">details <span class="mdi mdi-18px mdi-eye-outline align-middle"></span></a></td>
         {% endif %}
     </tr>
 {% endfor %}
