--- a/Resources/views/admin/customer/list.html.twig
+++ b/Resources/views/admin/customer/list.html.twig
@@ -3,8 +3,11 @@
 {% block title %}{{ 'admin_customers.list.page_title'|trans }}{% endblock %}
 
 {% block content %}
+    <div class="d-flex align-items-center justify-content-between mb-4">
+        <h1 class="h3">Customers</h1>
+    </div>
 
-    <table class="table">
+    <table class="table table-striped table-hover">
         <thead>
         <tr>
             <th scope="col">{{ 'admin_customers.list.fields.platform.header'|trans }}</th>
@@ -23,11 +26,11 @@
             <tr>
                 <td colspan="20">
                     {% if entities.prevPage %}
-                        <a href="{{ url('sfs_subscription_admin_customers_list', app.request.query.all|merge({ page: entities.prevPage })) }}">Prev page</a>
+                        <a href="{{ url('sfs_subscription_admin_customers_list', app.request.query.all|merge({ page: entities.prevPage })) }}" title="Prev page"><span class="mdi mdi-24px mdi-chevron-left"></span></a>
                     {% endif %}
 
                     {% if entities.nextPage %}
-                        <a class="float-right" href="{{ url('sfs_subscription_admin_customers_list', app.request.query.all|merge({ page: entities.nextPage })) }}">Next page</a>
+                        <a class="float-right" href="{{ url('sfs_subscription_admin_customers_list', app.request.query.all|merge({ page: entities.nextPage })) }}" title="Next page"><span class="mdi mdi-24px mdi-chevron-right"></span></a>
                     {% endif %}
                 </td>
             </tr>
