--- a/Resources/views/admin/plan/create.html.twig
+++ b/Resources/views/admin/plan/create.html.twig
@@ -3,9 +3,14 @@
 {% block title %}{{ 'admin_plans.create.page_title'|trans }}{% endblock %}
 
 {% block content %}
+    <div class="d-flex align-items-center justify-content-between mb-4">
+        <h1 class="h3">Create plan</h1>
+    </div>
     {{ form_start(form) }}
         {{ form_widget(form) }}
         {{ form_rest(form) }}
-        <input type="submit" value="{{ 'admin_plans.create.actions.create.button'|trans }}" class="btn btn-primary btn-block" />
+        <div class="d-flex justify-content-end align-items-center">
+            <input type="submit" value="{{ 'admin_plans.create.actions.create.button'|trans }}" class="btn btn-primary ml-3" />
+        </div>
     {{ form_end(form) }}
 {% endblock content %}
