--- a/Resources/views/admin/plan/list.html.twig
+++ b/Resources/views/admin/plan/list.html.twig
@@ -3,15 +3,18 @@
 {% block title %}{{ 'admin_plans.list.page_title'|trans }}{% endblock %}
 
 {% block content %}
+    <div class="d-flex align-items-center justify-content-between mb-4">
+        <h1 class="h3">Plans</h1>
+    </div>
 
-    <table class="table">
+    <table class="table table-striped table-hover">
         <thead>
         <tr>
             <th scope="col">{{ 'admin_plans.list.fields.platform.header'|trans }}</th>
             <th scope="col">{{ 'admin_plans.list.fields.platformId.header'|trans }}</th>
             <th scope="col">{{ 'admin_plans.list.fields.name.header'|trans }}</th>
             <th scope="col">{{ 'admin_plans.list.fields.product.header'|trans }}</th>
-            <th scope="col" class="text-right">{{ 'admin_plans.list.fields.price.header'|trans }}</th>
+            <th scope="col">{{ 'admin_plans.list.fields.price.header'|trans }}</th>
 {#            <th>&nbsp;</th>#}
         </tr>
         </thead>
@@ -25,11 +28,11 @@
             <tr>
                 <td colspan="20">
                     {% if entities.prevPage %}
-                        <a href="{{ url('sfs_subscription_admin_plans_list', app.request.query.all|merge({ page: entities.prevPage })) }}">Prev page</a>
+                        <a href="{{ url('sfs_subscription_admin_plans_list', app.request.query.all|merge({ page: entities.prevPage })) }}" title="Prev page"><span class="mdi mdi-24px mdi-chevron-left"></span></a>
                     {% endif %}
 
                     {% if entities.nextPage %}
-                        <a class="float-right" href="{{ url('sfs_subscription_admin_plans_list', app.request.query.all|merge({ page: entities.nextPage })) }}">Next page</a>
+                        <a class="float-right" href="{{ url('sfs_subscription_admin_plans_list', app.request.query.all|merge({ page: entities.nextPage })) }}" title="Next page"><span class="mdi mdi-24px mdi-chevron-right"></span></a>
                     {% endif %}
                 </td>
             </tr>
