--- a/Resources/views/admin/subscription/list.html.twig
+++ b/Resources/views/admin/subscription/list.html.twig
@@ -2,14 +2,19 @@
 {% extends '@SfsSubscription/admin_layout.html.twig' %}
 {% block title %}{{ 'admin_subscriptions.list.page_title'|trans }}{% endblock %}
 
-{% block content %}
+{% form_theme filterForm 'bootstrap_4_horizontal_layout.html.twig' %}
 
-    {{ form_start(filterForm) }}
-    {{ form_widget(filterForm) }}
+{% block content %}
+    <div class="d-flex align-items-center justify-content-between mb-4">
+        <h1 class="h3">Subscriptions</h1>
+    </div>
+
+    {{ form_start(filterForm, {'attr': {'class': 'form-inline mb-3 mx-3'}} )}}
+{#    {{ form_widget(filterForm) }}#}
     {{ form_rest(filterForm) }}
     {{ form_end(filterForm) }}
 
-    <table class="table">
+    <table class="table table-striped table-hover">
         <thead>
         <tr>
             <th scope="col">{{ 'admin_subscriptions.list.fields.customer.header'|trans }}</th>
@@ -32,11 +37,11 @@
             <tr>
                 <td colspan="20">
                     {% if entities.prevPage %}
-                        <a href="{{ url('sfs_subscription_admin_subscriptions_list', app.request.query.all|merge({ page: entities.prevPage })) }}">Prev page</a>
+                        <a href="{{ url('sfs_subscription_admin_subscriptions_list', app.request.query.all|merge({ page: entities.prevPage })) }}" title="Prev page"><span class="mdi mdi-24px mdi-chevron-left"></span></a>
                     {% endif %}
 
                     {% if entities.nextPage %}
-                        <a class="float-right" href="{{ url('sfs_subscription_admin_subscriptions_list', app.request.query.all|merge({ page: entities.nextPage })) }}">Next page</a>
+                        <a class="float-right" href="{{ url('sfs_subscription_admin_subscriptions_list', app.request.query.all|merge({ page: entities.nextPage })) }}" title="Next page"><span class="mdi mdi-24px mdi-chevron-right"></span></a>
                     {% endif %}
                 </td>
             </tr>
