--- a/Resources/views/admin/plan/list.html.twig
+++ b/Resources/views/admin/plan/list.html.twig
@@ -5,6 +5,11 @@
 {% block content %}
     <div class="d-flex align-items-center justify-content-between mb-4">
         <h1 class="h3">Plans</h1>
+
+        {# TODO restrict by permission #}
+        <div class="float-right">
+            <a class="btn btn-light" href="{{ url('sfs_subscription_admin_plans_sync_all') }}">Sync all</a>
+        </div>
     </div>
 
     <table class="table table-striped table-hover">
@@ -12,6 +17,7 @@
         <tr>
             <th scope="col">{{ 'admin_plans.list.fields.platform.header'|trans }}</th>
             <th scope="col">{{ 'admin_plans.list.fields.platformId.header'|trans }}</th>
+            <th scope="col">{{ 'admin_plans.list.fields.active.header'|trans }}</th>
             <th scope="col">{{ 'admin_plans.list.fields.name.header'|trans }}</th>
             <th scope="col">{{ 'admin_plans.list.fields.product.header'|trans }}</th>
             <th scope="col">{{ 'admin_plans.list.fields.price.header'|trans }}</th>
