Refactor subscription adapter and manager

--- a/Resources/views/admin/subscription/read.html.twig
+++ b/Resources/views/admin/subscription/read.html.twig
@@ -24,7 +24,7 @@
         <ul>
             <li>
                 <strong>Latest invoice:</strong>
-                {{ stripe_subscription_data.latest_invoice }}
+                {{ stripe_subscription_data.platformNativeResponse.latest_invoice }}
             </li>
         </ul>
 {#        'id' => string(18) "sub_xxxxxxxx"#}
