--- a/Resources/views/admin/plan/list.html.twig
+++ b/Resources/views/admin/plan/list.html.twig
@@ -8,7 +8,7 @@
 
         {# TODO restrict by permission #}
         <div class="float-right">
-            <a class="btn btn-light" href="{{ url('sfs_subscription_admin_plans_sync_all') }}">Sync all</a>
+            <a class="btn btn-outline-primary" href="{{ url('sfs_subscription_admin_plans_sync_all') }}">{{ 'admin_plans.list.sync_button'|trans }} <span class="mdi mdi-sync"></span></a>
         </div>
     </div>
 
