--- a/Resources/views/admin/subscription/list.html.twig
+++ b/Resources/views/admin/subscription/list.html.twig
@@ -4,6 +4,11 @@
 
 {% form_theme filterForm 'bootstrap_4_horizontal_layout.html.twig' %}
 
+{% block breadcrums_content %}
+    {{ parent() }}
+    <li class="breadcrumb-item active" aria-current="page">Subscriptions</li>
+{% endblock breadcrums_content %}
+
 {% block content %}
     <div class="d-flex align-items-center justify-content-between mb-4">
         <h1 class="h3">Subscriptions</h1>
@@ -14,38 +19,39 @@
     {{ form_rest(filterForm) }}
     {{ form_end(filterForm) }}
 
-    <table class="table table-striped table-hover">
-        <thead>
-        <tr>
+    {% embed '@SfsAdmin/components/table.html.twig' with {'collection':entities} %}
+        {% trans_default_domain 'sfs_subscription' %}
+        {% block ths %}
             <th scope="col">{{ 'admin_subscriptions.list.fields.customer.header'|trans }}</th>
             <th scope="col">{{ 'admin_subscriptions.list.fields.plan.header'|trans }}</th>
             <th scope="col">{{ 'admin_subscriptions.list.fields.status.header'|trans }}</th>
             <th scope="col">{{ 'admin_subscriptions.list.fields.startDate.header'|trans }}</th>
             <th scope="col">{{ 'admin_subscriptions.list.fields.endDate.header'|trans }}</th>
             {% if read_route %}
-            <th>&nbsp;</th>
+                <th>&nbsp;</th>
             {% endif %}
-        </tr>
-        </thead>
+        {% endblock ths %}
 
-        <tbody>
-        {% include '@SfsSubscription/admin/subscription/list-page.html.twig' %}
-        </tbody>
+        {% block tbody %}
+            {% include '@SfsSubscription/admin/subscription/list-page.html.twig' %}
+        {% endblock tbody %}
 
-        {% if entities.pages|default(false) %}
-            <tfoot>
-            <tr>
-                <td colspan="20">
-                    {% if entities.prevPage %}
-                        <a href="{{ url('sfs_subscription_admin_subscriptions_list', app.request.query.all|merge({ page: entities.prevPage })) }}" title="Prev page"><span class="mdi mdi-24px mdi-chevron-left"></span></a>
-                    {% endif %}
+        {% block tfooter %}
+            {% if entities.pages|default(false) %}
+                <tfoot>
+                <tr>
+                    <td colspan="20">
+                        {% if entities.prevPage %}
+                            <a href="{{ url('sfs_subscription_admin_subscriptions_list', app.request.query.all|merge({ page: entities.prevPage })) }}" title="Prev page"><span class="mdi mdi-24px mdi-chevron-left"></span></a>
+                        {% endif %}
 
-                    {% if entities.nextPage %}
-                        <a class="float-right" href="{{ url('sfs_subscription_admin_subscriptions_list', app.request.query.all|merge({ page: entities.nextPage })) }}" title="Next page"><span class="mdi mdi-24px mdi-chevron-right"></span></a>
-                    {% endif %}
-                </td>
-            </tr>
-            </tfoot>
-        {% endif %}
-    </table>
+                        {% if entities.nextPage %}
+                            <a class="float-right" href="{{ url('sfs_subscription_admin_subscriptions_list', app.request.query.all|merge({ page: entities.nextPage })) }}" title="Next page"><span class="mdi mdi-24px mdi-chevron-right"></span></a>
+                        {% endif %}
+                    </td>
+                </tr>
+                </tfoot>
+            {% endif %}
+        {% endblock tfooter %}
+    {% endembed %}
 {% endblock content %}
