Show platform data in admin views for debugging

--- a/Resources/views/admin/subscription/read.html.twig
+++ b/Resources/views/admin/subscription/read.html.twig
@@ -46,5 +46,5 @@
             </li>
         </ul>
 
-    {% include '@SfsPlatform/platform_data.html.twig' with {'platformObject': subscription} %}
+    {% include '@SfsPlatform/platform_data.html.twig' ignore missing with {'platformObject': subscription} %}
 {% endblock content %}
